--- a/style.css
+++ b/style.css
@@ -1,1 +1,17 @@
 /* file: style.css */
+body{
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
+}
+.header{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
+    align-content: flex-start;
+    flex-wrap: nowrap;
+}
+.logo-img{
+    flex:3;
+}
+.hero-link{
+    align-self: flex-end;
+}
