--- a/style.css
+++ b/style.css
@@ -1,17 +1,30 @@
 /* file: style.css */
 body{
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
+  background:#1F2937;
 }
 .header{
     display:flex;
     flex-direction:row;
     justify-content: space-between;
     align-content: flex-start;
-    flex-wrap: nowrap;
+    font-size: 18px;
+    color: #f9faf8;
+    font-weight: 900;
+
 }
-.logo-img{
-    flex:3;
+ul{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 16px
 }
-.hero-link{
-    align-self: flex-end;
+a{
+    color:#f9faf8;
+    text-decoration: none;
+    
+}
+a:hover{
+    color:#3882F6;
 }
