--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* file: style.css */
 body{
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
-  background:#1F2937;
+    background:#1F2937;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
 }
 .header{
     display:flex;
@@ -11,7 +11,13 @@ body{
     font-size: 18px;
     color: #f9faf8;
     font-weight: 900;
-
+    background:#1F2937;
+}
+.footer{
+    text-align:center;
+    color: #f9faf8;
+    background:#1F2937;
+    font-size: 18px;
 }
 .logo-img{
     font-size:24px;
