--- a/style.css
+++ b/style.css
@@ -44,4 +44,16 @@ ul{
 .header-links a:hover{
     color:#3882F6;
 }
+.hero{
+    display: inline-block;
 
+}
+.hero-text{
+    font-size: 48px;
+    font-weight: 900px;
+    color:#f9faf8;
+}
+.hero-sub-text{
+    font-size:18px;
+    color:#E5E7EB;
+}
