--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /* file: style.css */
 body{
-    background:#1F2937;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
 }
 .header{
@@ -12,10 +11,9 @@ body{
     color: #f9faf8;
     font-weight: 900;
     background:#1F2937;
-    width:950px;
-    height:1px;
-    margin-left:50px;
-    margin-right:50px;
+    width:800px;
+    padding:15px;
+    
 }
 .footer{
     display: flex;
@@ -24,9 +22,21 @@ body{
     align-content: center;
     color: #f9faf8;
     background:#1F2937;
+    width:800px;
     font-size: 18px;
+}
+.cta{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-content:center;
+    color: #f9faf8;
+    background:#3882F6;
+    font-size: 18px;
+    border-radius:10px;
+    width:600px;
+    height:auto;
     margin-left:50px;
-    margin-right:50px;
 }
 .logo-img{
     font-size:24px;
