--- a/style.css
+++ b/style.css
@@ -2,32 +2,9 @@
 body{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
 }
-.header{
-    display:flex;
-    flex-direction:row;
-    justify-content: space-between;
-    align-content: flex-start;
-    font-size: 18px;
-    color: #f9faf8;
-    font-weight: 900;
-    background:#1F2937;
-    width:800px;
-    padding:15px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-.footer{
-    display: flex;
-    flex-direction:row;
-    justify-content: center;
-    align-content: center;
-    color: #f9faf8;
-    background:#1F2937;
-    width:800px;
-    font-size: 18px;
-    margin-left: auto;
-    margin-right: auto;
+.cta-background{
+    background:#f9faf8;
+    margin:50px;
 }
 .cta{
     display: flex;
@@ -70,28 +47,4 @@ button{
     padding:0px;
     margin-right: 80px;
 }
-.logo-img{
-    font-size:24px;
-    color:#f9faf8;
-    margin: 0;
-    padding: 0;
-}
-.header-links{
-    font-size:18px;
-    color:#E5E7EB;
-}
-ul{
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    gap: 16px
-}
-.header-links a{
-    color:#E5E7EB;
-    text-decoration: none;
-    
-}
-.header-links a:hover{
-    color:#3882F6;
-}
+
