--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /* file: style.css */
 body{
+    margin:0;
+    padding:0;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
+}
+.header-background{
+    background: #1F2937;
+    color: #f9faf8;
 }
 .cta-background{
     background:#f9faf8;
@@ -46,5 +52,9 @@ button{
     flex-direction: column;
     padding:0px;
     margin-right: 80px;
+}
+.footer-background{
+    background: #1F2937;
+    color: #f9faf8;
 }
 
