--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ body{
     color: #f9faf8;
     padding:50px;
 }
+.logo-img{
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: 600;
+}
+.header-links{
+    font-size: 18px;
+}
 .info-background{
     background: #f9faf8;
     padding:50px;
@@ -98,11 +106,14 @@ cite{
 }
 a{
     text-decoration: none;
-    color: #f9faf8;
+    color: #E5E7EB;
     font-size: 18px;
 }
 a:hover{
     text-decoration: none;
     color: #3882F6;
     font-size: 18px;
+}
+ul{
+    list-style-type: none;
 }
