--- a/style.css
+++ b/style.css
@@ -9,14 +9,31 @@ body{
     color: #f9faf8;
     padding:50px;
 }
+.header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
 .logo-img{
+    display: flex;
     font-size: 24px;
     color: #f9faf8;
     font-weight: 600;
+
+}
+ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    margin:0px;
+    padding:0px;
+    gap:15px;
+    margin-left:70px;
 }
 .header-links{
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 15px;
 }
 .info-background{
     background: #f9faf8;
@@ -114,7 +131,4 @@ a:hover{
     text-decoration: none;
     color: #3882F6;
     font-size: 18px;
-}
-ul{
-    list-style-type: none;
 }
