--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ ul{
     list-style-type: none;
     display: flex;
     justify-content: flex-end;
+    align-content: center;
     flex-wrap: nowrap;
     margin:0px;
     padding:0px;
@@ -34,6 +35,43 @@ ul{
 }
 .header-links{
     font-size: 15px;
+}
+.hero{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.main{
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+}
+.hero-button{
+    color: #f9faf8;
+    background:#3882F6;
+    border:1px solid #3882F6;
+    font-size:15px;
+    border-radius:5px;
+    width: 120px;
+    height: fit-content;
+    padding:10px;
+}
+.hero-button:hover{
+    color: #f9faf8;
+    background:#1f56ad;
+    border:1px solid #1f56ad;
+    font-size:15px;
+    border-radius:5px;
+    width: 120px;
+    height: fit-content;
+    padding:10px;
+}
+.hero-signup{
+    display: flex;
+    justify-content: center;
 }
 .info-background{
     background: #f9faf8;
